formatting fixes (header rows, input fields, buttons scaling, footer size, element spacing)

--- a/node/public/css/style.css
+++ b/node/public/css/style.css
@@ -5,14 +5,13 @@ margin: 0;
 html, body{
 	height: 100%;
 	overflow-x: hidden !important;
-
 } 
 
 body{
 	background-color: #f0f0f0;
 	font-family: Tahoma, Geneva, sans-serif;
 	/*font-size: 5.5vw;	*/
-	font-size: 16px;
+	font-size: 14px;
 	font-weight: 200;
 	letter-spacing: 1px;
 	color: #303030; 
@@ -32,13 +31,13 @@ body{
 	height: auto !important;
 	height: 100%;
 	/* Negative indent footer by it's height */
-	margin: 0 auto -50px; 
+	margin: 0 auto -40px; 
 }
 
 
 
 #prelogin-main{
-	margin-top: 125px;
+	margin-top: 115px;
 	margin-bottom: -50px;
 }
 
@@ -52,8 +51,9 @@ body{
 
 
 #push, #footer {
-	height: 50px;
+	height: 40px;
 }
+
 
 .footerInfo{
 	padding-top: 12px;
@@ -96,7 +96,11 @@ body{
 }
 
 
-
+table{
+	width: 100%;
+	max-width: 600px;
+	margin: auto;
+}
 .text-randomInspiration{
 	width: 100%;
 	height: 200px;
@@ -209,7 +213,9 @@ body{
 
 
 
-
+#createAccount{
+	margin: auto;
+}
 
 
 .container{
@@ -351,15 +357,15 @@ input  {
 	width:100%;
 	display:block;
 	border: 1px solid #999;
-	margin: 0px 0px 0px 0px;
+	margin: 0px 0px 5px 0px;
 	-webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
 	-moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
 	box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-	padding: 7px 20px;
+	padding: 6px 20px;
 }
 
 input.newSubmit, .inputForm {
-	margin-top: 25px;
+	margin-top: 15px;
 }
 
 .addButton{
@@ -384,7 +390,9 @@ input.submitButton, .addPhotoButton, .addMessageButton {
 	/*font-size: 32px; */
 	/*font-size: 4.5vw; */
 	letter-spacing: 1px;
-	padding: 10px 5px;
+	padding: 8px 5px;
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
 
 .addPhotoButton, .addMessageButton {
@@ -413,7 +421,8 @@ textarea:focus, input:focus {
 
 
 .forgot_password{
-	margin-top: 3%;
+	margin-bottom: 10px;
+	margin-top: 5px;
 }
 
 .forgot_password a{
@@ -428,8 +437,10 @@ textarea:focus, input:focus {
 	border-top: solid #303030 1px;
 	border-bottom: solid #303030 1px;
 	padding: 3px 0px;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 	font-size: 16px;
+	width: 100%;
+	max-width: 600px;
 
 }
 
